# league-monitor

./: .gitignore  README.md  config.example.json  ecosystem.config.cjs  package.json  test-client.js  test-server.js
cpp/: .gitignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  QUICKSTART.md  README.md  build.bat  build.sh
cpp/include/controller/: client_monitor.h
cpp/include/shared/: config.h  league_utils.h  logger.h  process_utils.h  types.h  websocket_client.h
cpp/src/client/: main.cpp
cpp/src/controller/: client_monitor.cpp  main.cpp
cpp/src/shared/: config.cpp  league_utils.cpp  logger.cpp  process_utils.cpp  websocket_client.cpp  websocket_client_impl.cpp  websocket_client_impl.h
csharp/: .gitignore  LeagueMonitor.sln  README.md
csharp/LeagueMonitor/: App.xaml  App.xaml.cs  LeagueMonitor.csproj  app.manifest  appsettings.json
csharp/LeagueMonitor/Configuration/: AppConfig.cs
csharp/LeagueMonitor/Core/: LeagueUtils.cs  Logger.cs  PrivilegeManager.cs  ProcessManager.cs  ProcessWatcher.cs  VanguardService.cs
csharp/LeagueMonitor/Network/: MessageTypes.cs  RelayClient.cs
csharp/LeagueMonitor/Services/: ControllerService.cs  FollowerService.cs
csharp/LeagueMonitor/ViewModels/: MainViewModel.cs
csharp/LeagueMonitor/Views/: MainWindow.xaml  MainWindow.xaml.cs
dashboard/: README.md  nuxt.config.ts  package.json
dashboard/pages/: index.vue
dashboard/pages/session/: [token].vue
python/: LeagueMonitor.spec  README.md  build_macos.sh  build_pyinstaller.sh  build_windows.ps1  config.yaml  requirements.txt  run.py  setup.py
python/assets/: .gitkeep
python/league_monitor/: __init__.py  __main__.py  config.py  controller.py  follower.py  gui.py  league_utils.py  logger.py  process_manager.py  relay_client.py
scripts/: check-relay-endpoints.js  ws-admin-subscribe.js
src/client/: index.ts  network-client.ts
src/controller/: client-monitor.ts  index.ts  network-server.ts  session-client.ts
src/relay-server/: index.ts  session-manager.ts
src/shared/: config.ts  league-utils.ts  logger.ts  process-utils.ts  types.ts
